microservice architecture: HATEOAS, service, controllers and repository corrections.
